@@ -223,6 +223,7 @@ HeartbeatThread::HeartbeatThread(application_features::ApplicationServer& server
       _lastPlanVersionNoticed(0),
       _lastCurrentVersionNoticed(0),
       _updateCounter(0),
+      _updateDBServers(false),
       _agencySync(_server, this),
       _heartbeat_send_time_ms(server.getFeature<arangodb::MetricsFeature>().histogram(
           StaticStrings::HeartbeatSendTimeMs, log_scale_t<uint64_t>(2, 4, 8000, 10),
@@ -254,6 +255,49 @@ HeartbeatThread::~HeartbeatThread() {
 void HeartbeatThread::run() {
   ServerState::RoleEnum role = ServerState::instance()->getRole();
 
+  std::unordered_map<std::string, std::shared_ptr<AgencyCallback>> serverCallbacks{};
+  if (ServerState::instance()->isCoordinator(role) ||
+      ServerState::instance()->isDBServer(role) ||
+      (ServerState::instance()->isSingleServer(role) &&
+       _server.getFeature<ReplicationFeature>().isActiveFailoverEnabled())) {
+    std::function<bool(VPackSlice const& result)> updbs = [self = shared_from_this()] (VPackSlice const& result) {
+      LOG_TOPIC("fe092", DEBUG, Logger::HEARTBEAT) << "Updating cluster's cache of current db servers";
+      self->updateDBServers();
+      return true;
+    };
+    std::vector<std::string> const dbServerAgencyPaths{
+      "Current/DBServers", "Target/FailedServers", "Target/CleanedServers", "Target/ToBeCleanedServers"};
+    for (auto const& path : dbServerAgencyPaths) {
+      serverCallbacks.try_emplace(path, std::make_shared<AgencyCallback>(_server, path, updbs, true, false));
+    }
+    std::function<bool(VPackSlice const& result)> upsrv = [self = shared_from_this()] (VPackSlice const& result) {
+      LOG_TOPIC("2e09f", DEBUG, Logger::HEARTBEAT) << "Updating cluster's cache of current servers and rebootIds";
+      self->server().getFeature<ClusterFeature>().clusterInfo().loadServers();
+      return true;
+    };
+    std::vector<std::string> const serverAgencyPaths{
+      "Current/ServersRegistered", "Target/MapUniqueToShortID", "Current/ServersKnown",
+      "Current/ServersKnown/" + ServerState::instance()->getId()};
+    for (auto const& path : serverAgencyPaths) {
+      serverCallbacks.try_emplace(path, std::make_shared<AgencyCallback>(_server, path, upsrv, true, false));
+    }
+    std::function<bool(VPackSlice const& result)> upcrd = [self = shared_from_this()] (VPackSlice const& result) {
+      LOG_TOPIC("2f09e", DEBUG, Logger::HEARTBEAT) << "Updating cluster's cache of current coordinators";
+      self->server().getFeature<ClusterFeature>().clusterInfo().loadCurrentCoordinators();
+      return true;
+    };
+    std::string const path = "Current/Coordinators";
+    serverCallbacks.try_emplace(path, std::make_shared<AgencyCallback>(_server, path, upcrd, true, false));
+
+    for (auto const& cb : serverCallbacks) {
+      auto res = _agencyCallbackRegistry->registerCallback(cb.second);
+      if (!res.ok()) {
+        LOG_TOPIC("97aa8", WARN, Logger::HEARTBEAT)
+          << "Failed to register agency cache callback to " << cb.first << " degrading performance";
+      }
+    }
+  }
+
   // mop: the heartbeat thread itself is now ready
   setReady();
   // mop: however we need to wait for the rest server here to come up
@@ -272,7 +316,7 @@ void HeartbeatThread::run() {
     }
   }
 
-  LOG_TOPIC("9788a", TRACE, Logger::HEARTBEAT)
+  LOG_TOPIC("978a8", TRACE, Logger::HEARTBEAT)
       << "starting heartbeat thread (" << role << ")";
 
   if (ServerState::instance()->isCoordinator(role)) {
@@ -289,6 +333,10 @@ void HeartbeatThread::run() {
     LOG_TOPIC("8291e", ERR, Logger::HEARTBEAT)
         << "invalid role setup found when starting HeartbeatThread";
     TRI_ASSERT(false);
+  }
+
+  for (auto const& acb : serverCallbacks) {
+    _agencyCallbackRegistry->unregisterCallback(acb.second);
   }
 
   LOG_TOPIC("eab40", TRACE, Logger::HEARTBEAT)
@@ -379,15 +427,20 @@ void HeartbeatThread::getNewsFromAgencyForDBServer() {
     }
   }
 
-  // Periodically update the list of DBServers and prune agency comm
-  // connection pool:
-  if (++_updateCounter >= 60) {
+  // Periodical or event-based update of DBServers and pruning of
+  // agency comm connection pool:
+  auto updateDBServers = _updateDBServers.exchange(false);
+  if (updateDBServers || ++_updateCounter >= 60) {
     auto& clusterFeature = server().getFeature<ClusterFeature>();
     auto& ci = clusterFeature.clusterInfo();
     ci.loadCurrentDBServers();
     _updateCounter = 0;
     clusterFeature.pruneAsyncAgencyConnectionPool();
   }
+}
+
+void HeartbeatThread::updateDBServers() {
+  _updateDBServers.store(true);
 }
 
 DBServerAgencySync& HeartbeatThread::agencySync() { return _agencySync; }
