@@ -187,17 +187,23 @@ class HeartbeatThread : public CriticalThread,
   void getNewsFromAgencyForCoordinator();
 
   //////////////////////////////////////////////////////////////////////////////
+  /// @brief force update of db servers
+  //////////////////////////////////////////////////////////////////////////////
+
+  void updateDBServers();
+
+ public:
+  //////////////////////////////////////////////////////////////////////////////
   /// @brief bring the db server in sync with the desired state
   //////////////////////////////////////////////////////////////////////////////
 
- public:
   void notify();
 
+ private:
   //////////////////////////////////////////////////////////////////////////////
   /// @brief update the local agent pool from the slice
   //////////////////////////////////////////////////////////////////////////////
 
- private:
   void updateAgentPool(arangodb::velocypack::Slice const& agentPool);
 
   //////////////////////////////////////////////////////////////////////////////
@@ -325,6 +331,8 @@ class HeartbeatThread : public CriticalThread,
   std::atomic<uint64_t> _lastCurrentVersionNoticed;
   // For periodic update of the current DBServer list:
   std::atomic<int> _updateCounter;
+  // For event-based update of the current DBServer list:
+  std::atomic<bool> _updateDBServers;
 
   /// @brief Sync job
   DBServerAgencySync _agencySync;
