@@ -1,6 +1,9 @@
 v3.7.11 (XXXX-XX-XX)
 --------------------
 
+* Timely updates of rebootId / cluster membership of DB servers and
+  coordinators in ClusterInfo. Fixes BTS-368 detected in chaos tests.
+
 * Fix BTS-352: removed assertion for success of a RocksDB function and throw a
   proper exception instead.
 
